# car-ownership-analyzer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
reference/: prototype.jsx
reference/js_implementation/: computeScenario.js
specs/: CALCULATIONS.md  CONVERSATION.md  DATA_MODEL.md  PRD.md  TECHNICAL.md  UI_UX.md
src/: App.jsx  engine.rs  index.css  lib.rs
src/components/: ConfigPanel.jsx  ConfigPanel.test.jsx  CostChart.jsx  ParameterPanel.jsx  SliderInput.jsx  SummaryCards.jsx  TabButton.jsx
src/engine/: constants.js
